# explore

./: CMakeLists.txt  README.md  SyntaxHighlighter.cpp  SyntaxHighlighter.h  config.h  fcexplore.cfg  fcinstance.cpp  fcinstance.h  inlinegraphsdialog.cpp  inlinegraphsdialog.h  inlinegraphsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  querytab.cpp  querytab.h  querytab.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  verbositydialog.cpp  verbositydialog.h  verbositydialog.ui
scripts/: newscript.sh  newscriptsh  output.sh  testsuitesetops.sh
